<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SM-Logger</string>
    <string name="action_select">Select Item</string>
    <string name="get_shell_access">Get Shell Access</string>
    <string name="get_shell_access_description">Connect this device to your computer and run this command, then press "Get Shell Access" button. If failed, restart please press "restart adb server" button.</string>
    <string name="restart_adb">Restart adb server (Open TerminalEmulator)</string>
 	<string name="install_terminal">Please install TerminalEmulator</string>
 	<string name="started_logcat">Started reading Logcat!</string>
 	<string name="show_log">Show Log</string>
 	<string name="start_logging">Start Logging</string>
 	<string name="stop_logging">Stop Logging</string>
 	<string name="from_time">From</string>
 	<string name="to_time">To</string>
 	<string name="wrong_time">Wrong time!</string>
 	<string name="edit_item">Edit items to show</string>
 	<string name="loading">Loading…</string>
 	<string name="not_found">Not found!</string>
 	<string name="select_itme">Select item</string>
 	<string name="condition">Condtion</string>
 	<string name="logging">Logging…</string>
 	<string name="wrong_query">Wrong query!</string>
 	<string name="backup_db">Backup Database</string>
 	<string name="search_ex"></string>
</resources>
