<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="5sp"
    android:orientation="vertical" >
    
	<Button
	    android:id="@+id/button1"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/show_log" />
	
	<Button
	    android:id="@+id/button2"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/get_shell_access" />
	
	<Button
	    android:id="@+id/button3"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/start_logging" />
	
	<Button
	    android:id="@+id/button4"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/stop_logging" />
	<Button
	    android:id="@+id/button5"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/backup_db" />
	
	

</LinearLayout>